# conversa

./: .gitignore  README.md  conversa.example.toml  pyproject.toml
.github/workflows/: publish.yml  test.yml
plans/: visibility-license-topics-pypi.md
src/conversa/: __init__.py  asr.py  cli.py  config.py  pipeline.py  postprocess.py  secrets.py  speakers.py
src/conversa/prompts/: clean.txt  narrate.txt  narrate_brief.txt  summary.txt
tests/: test_language.py  test_speakers.py
