[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversa"
version = "0.1.0"
description = "Local, evidence-oriented conversation transcription (WhisperX + Anthropic)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Salvador" }]
dependencies = [
    "whisperx>=3.4,<4",
    "anthropic>=0.40,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
conversa = "conversa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/conversa"]

[tool.hatch.build.targets.wheel.force-include]
"src/conversa/prompts" = "conversa/prompts"
