[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversa-transcribe"
version = "0.1.0"
description = "Local, evidence-oriented conversation transcription (WhisperX + Anthropic)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Salvador" }]
keywords = [
    "transcription", "whisper", "whisperx", "speaker-diarization",
    "speech-to-text", "evidence", "cli", "anthropic", "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "whisperx>=3.4,<4",
    "anthropic>=0.40,<1",
]

[project.urls]
Repository = "https://github.com/salvagit/conversa"
Issues = "https://github.com/salvagit/conversa/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
conversa = "conversa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/conversa"]
